@@ -23,6 +23,9 @@
 #ifndef OM_HGUARD_QUARTZ_DATABASE_H
 #define OM_HGUARD_QUARTZ_DATABASE_H
 
+#include "config.h"
+#ifdef MUS_BUILD_BACKEND_QUARTZ
+
 #include "database.h"
 
 class QuartzDbManager;
@@ -104,5 +107,7 @@ class QuartzDatabase : public IRDatabase {
 	LeafTermList * open_term_list(om_docid did) const;
 	LeafDocument * open_document(om_docid did) const;
 };
+
+#endif /* MUS_BUILD_BACKEND_QUARTZ */
 
 #endif /* OM_HGUARD_QUARTZ_DATABASE_H */
